# linkedin-layoff-scraper

./: .gitignore  README.md  pyproject.toml
src/: scrape.py
src/models/: linkedin_urls.py
